--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@cloudflare/vite-plugin": "^1.15.3",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.0.0",
     "wrangler": "^4.51.0"
   },
@@ -20,6 +20,8 @@
     "framer-motion": "^12.23.25",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.555.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-helmet-async": "^2.0.5",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.6"
