--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "wrangler": "^4.51.0"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.7.0",
+    "buffer": "^6.0.3",
     "framer-motion": "^12.23.25",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.555.0",
@@ -24,6 +26,7 @@
     "react-dom": "^19.2.0",
     "react-helmet-async": "^2.0.5",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "vite-plugin-node-polyfills": "^0.24.0"
   }
 }
